# GameLiftNet

./: readme.md
src/: GameLift_Net.sln
src/GameLiftNet/: AssemblyInfo.cpp  GameLiftNet.cpp  GameLiftNet.h  GameLiftNet.vcxproj  GameLiftNet.vcxproj.filters  ReadMe.txt  Stdafx.cpp
src/GameLiftServerSDK/: CMakeLists.txt
src/GameLiftServerSDK/dependencies/protobuf/include/google/protobuf/: map_proto2_unittest.pb.h
src/GameLiftServerSDK/include/aws/gamelift/common/: GameLiftErrors.h
src/GameLiftServerSDK/lib/: libprotobuf-lite.lib
src/GameLiftServerSDK/protocol_buffer/: generate_protocol_buffers.bat  sdk.proto
src/GameLiftServerSDK/protocol_buffer/generatedFiles/: sdk.pb.cc  sdk.pb.h
src/GameLiftServerSDK/source/aws/gamelift/common/: GameLiftCommonState.cpp  GameLiftErrors.cpp
src/GameLiftServerSDK/source/aws/gamelift/server/: AuxProxyMessageSender.cpp  GameLiftServerAPI.cpp  GameLiftServerState.cpp  Network.cpp
src/GameLiftServerSDK/source/aws/gamelift/server/protocols/: sdk.pb.cc
src/PureCpp/: GameLiftSDK.cpp  GameLiftSDK.h  GameLift_Net.vcxproj.filters  PureCpp.vcxproj
src/Sample/: Program.cs  Sample.csproj
src/Sample/Properties/: AssemblyInfo.cs
